# kalineatelier

./: .env.example  .gitignore  ONTOLOGY.md  README.md  bunfig.toml  eslint.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts  wrangler.toml
.github/workflows/: ci.yml  supabase-migrations-apply.yml  supabase-migrations-check.yml
.lovable/: plan.md
apps/installer-worker/: README.md  package-lock.json  package.json  (+2 more)
apps/kaline-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/kaline-desktop/src-tauri/icons/: icon.icns
apps/kaline-desktop/src-tauri/src/: main.rs
docs/: brand-assets.md  bridge-secret.md  identity-audit.md  kaline-offline-linux-mint.md  self-host-cloudflare.md  supabase-setup.md
local-server/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
public/: manifest.webmanifest  sw.js
release/: CHECKLIST.md  README_RELEASE.md
scripts/: check-kaline-mint.sh  check-kaline-offline.sh  check-kaline-tts.sh  check-kaline-windows.ps1  check-local-env.js  create-kaline-desktop-launchers.sh  create-kaline-windows-shortcuts.ps1  create-kaline-xfce-shortcuts.sh  install-kaline-mint.desktop  install-kaline-mint.sh  install-kaline-windows.bat  install-kaline-windows.ps1  pin-kaline-to-mint-panel.sh  restart-kaline-mint.sh  setup-kaline-offline-env.sh  smoke-local-server.js  start-kaline-linux.sh  start-kaline-mint.sh  start-kaline-windows.bat  start-kaline-windows.ps1  stop-kaline-mint.sh  stop-kaline-windows.ps1
src/: routeTree.gen.ts  router.tsx  server.ts  start.ts  styles.css
supabase/: config.toml
(+310 files in other folders)
