[package]
name = "kaline-desktop"
version = "0.1.0"
description = "Lançadores nativos da Kaline Offline: app completo e janelinha always-on-top."
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[[bin]]
name = "kaline-desktop"
path = "src/main.rs"
